istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: client-app-vs
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - uri:  # IF
          prefix: "/api"
      rewrite:
        uri: " "
      route: # THEN
      - destination:
          host: server-cluster-ip-service
    - match:
      - uri :
          prefix: "/"
      route:
      - destination:
          host: client-cluster-ip-service
